gccida/g2/purge_addressof_1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3499:68: error: unknown type name 'hash_table_0'; did you mean 'hash_table'?
bool  purge_addressof_1( rtx *loc, rtx insn, int force, int store, hash_table_0 *ht) 
                                                                   ^~~~~~~~~~~~
                                                                   hash_table
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/hashtable.h:40:19: note: 'hash_table' declared here
typedef struct ht hash_table;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3499:7: error: conflicting types for 'purge_addressof_1'
bool  purge_addressof_1( rtx *loc, rtx insn, int force, int store, hash_table_0 *ht) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:293:13: note: previous declaration is here
static bool purge_addressof_1 PARAMS ((rtx *, rtx, int, int,
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3514:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3514:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3519:6: error: use of undeclared identifier 'fld'; did you mean 'fold'?
rtx *fld; // rbp 
     ^~~
     fold
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/tree.h:2822:13: note: 'fold' declared here
extern tree fold                PARAMS ((tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3519:5: error: invalid operands to binary expression ('struct rtx_def *' and 'tree (tree)' (aka 'union tree_node *(union tree_node *)'))
rtx *fld; // rbp 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3524:4: error: expected ';' after expression
rtx v29; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3524:5: error: use of undeclared identifier 'v29'
rtx v29; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3529:4: error: expected ';' after expression
rtx v34; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3529:5: error: use of undeclared identifier 'v34'
rtx v34; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3535:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3535:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3536:4: error: expected ';' after expression
rtx v41; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3536:5: error: use of undeclared identifier 'v41'
rtx v41; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3538:4: error: expected ';' after expression
rtx v43; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3538:5: error: use of undeclared identifier 'v43'
rtx v43; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3546:4: error: expected ';' after expression
rtx p; // [rsp+18h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3546:5: error: use of undeclared identifier 'p'
rtx p; // [rsp+18h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/function.c:3557:33: error: expected expression
v33 = purge_addressof_1( ( rtx *)v6->fld, insn, force, 1, ht); 
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_addressof_1/src/obj/function.o] Error 1
